tests/fixtures/positive/design/InnerClassesCannotBeStatic.cls
public class Outer {
    public class Inner {
        // Non-static inner class - valid
    }

    static void staticMethod() {
        // Static method in outer class - valid
    }
}
